--- a/discovery-server/.gitignore
+++ b/discovery-server/.gitignore
@@ -4,7 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
 *.iws
 *.iml
 *.ipr
@@ -33,6 +36,3 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
-.dockerignore
-dev_data
