--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 
 
 server:
-  port: 8082
+  port: 0
 spring:
   profiles:
     active: dev
@@ -32,6 +32,11 @@ spring:
       file-size-threshold: 2KB
       max-file-size: 200MB
       max-request-size: 215MB
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
 
 ---
 
