--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,5 +58,17 @@ services:
     volumes:
       - ./dev_data/inventory-data:/mysql
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:22.0.1
+    restart: unless-stopped
+    ports:
+      - '8181:8080'
+    environment:
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    networks:
+      - spring-boot-microservice
+
 networks:
   spring-boot-microservice:
