Implement Circuit Breaker

--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: discovery-server
+  security:
+    user:
+      name: eureka
+      password: password
 
 eureka:
   instance:
@@ -11,6 +15,9 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     renewal-percent-threshold: 0.49
+
 
