--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 server:
   port: 0
+
 spring:
   profiles:
     active: dev
   application:
     name: product-service
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://eureka:password@localhost:8761/eureka
+
 
 ---
 
@@ -18,11 +25,6 @@ spring:
       port: 27017
       database: product-service-dev
       auto-index-creation: true
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
 
 ---
 
