--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -2,23 +2,8 @@ server:
   port: 0
 
 spring:
-  profiles:
-    active: dev
   application:
     name: product-service
-
-eureka:
-  client:
-    service-url:
-      default-zone: http://eureka:password@localhost:8761/eureka
-
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: dev
   data:
     mongodb:
       host: localhost
@@ -26,15 +11,13 @@ spring:
       database: product-service-dev
       auto-index-creation: true
 
----
+eureka:
+  client:
+    service-url:
+      default-zone: http://eureka:password@localhost:8761/eureka
 
-spring:
-  config:
-    activate:
-      on-profile: test
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: product-service-test
-      auto-index-creation: true
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
