--- a/order-service/src/main/resources/application-docker.yml
+++ b/order-service/src/main/resources/application-docker.yml
@@ -1,9 +1,17 @@
+server:
+  port: 8080
+
 spring:
   datasource:
     url: jdbc:postgresql://order-postgres:5431/order-service
-    driver-class-name: org.postgresql.Driver
     username: ben
     password: ben1234
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   kafka:
     bootstrap-servers: broker:29092
 
