--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
                 <configuration>
                     <from>
                         <image>eclipse-temurin:17.0.4.1_1-jre</image>
+                        <platforms>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
                     </from>
                     <to>
                         <image>registry.hub.docker.com/benacio/${project.artifactId}</image>
